---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.10923                                -
---------------------------------------------
- 2021-05-22                                -
---------------------------------------------
.: WSW: Task - Retrieve user details to place order + save inserted details (WSW-115)
.: WSW: Task - Link the order button in website to local shopping (WSW-116)

---------------------------------------------
- 2021-05-20                                -
---------------------------------------------
.: WSM: Task - Fix QRcode in production (WSM-370)

- v1.0.10922                                -
---------------------------------------------
- 2021-05-17                                -
---------------------------------------------
.: WSM: Task - Improvement: Profile images for item (WSM-367)

- v1.0.10921                                -
---------------------------------------------
- 2021-05-11                                -
---------------------------------------------
.: WSW: Task - Display default store profile image (WSW-111)

---------------------------------------------
- 2021-05-10                                -
---------------------------------------------
.: WSW: BugFix - Link is not able to be clicked (WSW-113)
.: WSW: BugFix - Delivery fee show empty rather than not show (WSW-114)
.: WSW: Task - Add description in cart item (WSW-112)
.: WSW: Task - Remove "remove" button in Orders (WSW-111)
.: WSW: Task - Must login as user to place order (WSW-110)

- v1.0.1092                                 -
---------------------------------------------
- 2021-05-08                                -
---------------------------------------------
.: WSW: BugFix - Not able to navigate to other page when invoice is not found (WSW-106)
.: WSW: Task - Add mobile size supported for order (WSW-105)